--- a/notebooks/2d_object_detection_waymo.ipynb
+++ b/notebooks/2d_object_detection_waymo.ipynb
@@ -1182,6 +1182,233 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b9c3e187-21bf-4f67-ab22-88f639b02399",
+   "metadata": {},
+   "source": [
+    "## Visualise Predictions\n",
+    "\n",
+    "You can see the model in action!\n",
+    "The below code takes a randomn parquet you chose from the Waymo training set, processes it into .pt files and runs predictions against it using the new model, before creating a video of the results."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7dc6519e-336a-4777-93ab-05f0c38ed69d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "import gcsfs\n",
+    "import pyarrow.parquet as pq\n",
+    "import pandas as pd\n",
+    "import torch\n",
+    "import io\n",
+    "import numpy as np\n",
+    "from PIL import Image\n",
+    "import logging\n",
+    "import gc\n",
+    "import shutil\n",
+    "import cv2\n",
+    "from torch.utils.data import DataLoader\n",
+    "from torchvision.transforms import functional as F\n",
+    "\n",
+    "class WaymoUnlabeledDataset(Dataset):\n",
+    "    def __init__(self, root_dir, file_list, transform=None):\n",
+    "        self.root_dir = root_dir.rstrip('/')\n",
+    "        self.file_list = file_list\n",
+    "        self.transform = transform\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.file_list)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        file_name = self.file_list[idx]\n",
+    "        file_path = os.path.join(self.root_dir, file_name)\n",
+    "\n",
+    "        with open(file_path, 'rb') as f:\n",
+    "            sample = torch.load(f)\n",
+    "\n",
+    "        image = sample['image']\n",
+    "\n",
+    "        if self.transform:\n",
+    "            image = self.transform(image)\n",
+    "\n",
+    "        return image, file_name\n",
+    "\n",
+    "# ========== CONFIG ==========\n",
+    "SOURCE_BUCKET = \"waymo_open_dataset_v_2_0_1\"\n",
+    "SPLIT = \"training\"\n",
+    "OUTPUT_DIR = \"/tmp/video_generation\"\n",
+    "VIDEO_NAME = \"predictions.mp4\"\n",
+    "MODEL_PATH = \"/tmp/waymo_data/checkpoints/final/best_model.pt\" # Change to actual model path in .pt format\n",
+    "CONFIDENCE_THRESHOLD = 0.5\n",
+    "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "FILENAME = \"example.parquet\" # Replace with your chosen parquet from Waymo dataset training set\n",
+    "# ============================\n",
+    "\n",
+    "# Clean output dir\n",
+    "if os.path.exists(OUTPUT_DIR):\n",
+    "    shutil.rmtree(OUTPUT_DIR)\n",
+    "os.makedirs(OUTPUT_DIR, exist_ok=True)\n",
+    "\n",
+    "# Logging\n",
+    "logging.basicConfig(level=logging.INFO)\n",
+    "logger = logging.getLogger(\"video_generation\")\n",
+    "\n",
+    "# GCS Filesystem\n",
+    "fs = gcsfs.GCSFileSystem(token=\"google_default\")\n",
+    "\n",
+    "# ===== Step 2: Download and Convert Parquet to .pt =====\n",
+    "def process_file(filename):\n",
+    "    GCS_PREFIX = f\"{SOURCE_BUCKET}/{SPLIT}\"\n",
+    "    image_path = f\"gs://{GCS_PREFIX}/camera_image/{filename}\"\n",
+    "    box_path = f\"gs://{GCS_PREFIX}/camera_box/{filename}\"\n",
+    "\n",
+    "    if not fs.exists(box_path[5:]):\n",
+    "        logger.warning(f\"Missing box file for {filename}, skipping.\")\n",
+    "        return\n",
+    "\n",
+    "    try:\n",
+    "        with fs.open(image_path, 'rb') as f_img:\n",
+    "            df_img = pq.read_table(f_img).to_pandas()\n",
+    "        with fs.open(box_path, 'rb') as f_box:\n",
+    "            df_box = pq.read_table(f_box).to_pandas()\n",
+    "    except Exception as e:\n",
+    "        logger.error(f\"Failed to read {filename}: {e}\")\n",
+    "        return\n",
+    "\n",
+    "    pairs = df_img[['key.frame_timestamp_micros', 'key.camera_name']].drop_duplicates()\n",
+    "    saved = 0\n",
+    "\n",
+    "    for _, row in pairs.iterrows():\n",
+    "        timestamp = row['key.frame_timestamp_micros']\n",
+    "        camera_id = row['key.camera_name']\n",
+    "        output_path = os.path.join(OUTPUT_DIR, f\"frame_{timestamp}_{camera_id}.pt\")\n",
+    "\n",
+    "        try:\n",
+    "            img_row = df_img[\n",
+    "                (df_img['key.frame_timestamp_micros'] == timestamp) &\n",
+    "                (df_img['key.camera_name'] == camera_id)\n",
+    "            ].iloc[0]\n",
+    "\n",
+    "            image = Image.open(io.BytesIO(img_row['[CameraImageComponent].image'])).convert(\"RGB\")\n",
+    "            image_tensor = torch.from_numpy(np.array(image)).permute(2, 0, 1).float() / 255.0\n",
+    "\n",
+    "            boxes_df = df_box[\n",
+    "                (df_box['key.frame_timestamp_micros'] == timestamp) &\n",
+    "                (df_box['key.camera_name'] == camera_id)\n",
+    "            ]\n",
+    "\n",
+    "            box_list, label_list = [], []\n",
+    "            for _, box in boxes_df.iterrows():\n",
+    "                cx = box['[CameraBoxComponent].box.center.x']\n",
+    "                cy = box['[CameraBoxComponent].box.center.y']\n",
+    "                w = box['[CameraBoxComponent].box.size.x']\n",
+    "                h = box['[CameraBoxComponent].box.size.y']\n",
+    "                x1, y1, x2, y2 = cx - w / 2, cy - h / 2, cx + w / 2, cy + h / 2\n",
+    "                box_list.append([x1, y1, x2, y2])\n",
+    "                label_list.append(box['[CameraBoxComponent].type'])\n",
+    "\n",
+    "            sample = {\n",
+    "                \"image\": image_tensor,\n",
+    "                \"boxes\": torch.tensor(box_list, dtype=torch.float32),\n",
+    "                \"labels\": torch.tensor(label_list, dtype=torch.int64)\n",
+    "            }\n",
+    "\n",
+    "            torch.save(sample, output_path)\n",
+    "            saved += 1\n",
+    "\n",
+    "            # Clean up\n",
+    "            del image_tensor, sample, image, img_row, boxes_df, box_list, label_list\n",
+    "            gc.collect()\n",
+    "\n",
+    "        except Exception as e:\n",
+    "            logger.error(f\"Error processing frame {timestamp} cam {camera_id}: {e}\")\n",
+    "\n",
+    "    del df_img, df_box\n",
+    "    gc.collect()\n",
+    "    logger.info(f\"Saved {saved} .pt files to {OUTPUT_DIR}\")\n",
+    "\n",
+    "print(f\"Processing parquet: {FILENAME}\")\n",
+    "process_file(FILENAME)\n",
+    "\n",
+    "# ===== Step 3: Inference and Video Generation =====\n",
+    "# Load model\n",
+    "model = get_model(num_classes=4)\n",
+    "checkpoint = torch.load(MODEL_PATH, map_location=DEVICE)\n",
+    "model.load_state_dict(checkpoint['model_state'])\n",
+    "model.to(DEVICE)\n",
+    "model.eval()\n",
+    "\n",
+    "# Load label map\n",
+    "label_map = label_map\n",
+    "id_to_name = {v: k for k, v in label_map.items()}\n",
+    "\n",
+    "# Load data\n",
+    "file_list = sorted([f for f in os.listdir(OUTPUT_DIR) if f.endswith(\".pt\")])\n",
+    "dataset = WaymoUnlabeledDataset(OUTPUT_DIR, file_list)\n",
+    "loader = DataLoader(dataset, batch_size=1, shuffle=False)\n",
+    "\n",
+    "# Font\n",
+    "font = cv2.FONT_HERSHEY_SIMPLEX\n",
+    "\n",
+    "def draw_predictions(img_tensor, boxes, labels, scores):\n",
+    "    img = F.to_pil_image(img_tensor.cpu().squeeze(0))\n",
+    "    img = cv2.cvtColor(np.array(img), cv2.COLOR_RGB2BGR)\n",
+    "\n",
+    "    for box, label, score in zip(boxes, labels, scores):\n",
+    "        if score < CONFIDENCE_THRESHOLD:\n",
+    "            continue\n",
+    "        x1, y1, x2, y2 = map(int, box)\n",
+    "        class_name = id_to_name.get(label.item(), f\"Class {label.item()}\")\n",
+    "        cv2.rectangle(img, (x1, y1), (x2, y2), (0, 255, 0), 2)\n",
+    "        cv2.putText(img, f\"{class_name} {score:.2f}\", (x1, y1 - 10),\n",
+    "                    font, 0.5, (255, 255, 255), 1, cv2.LINE_AA)\n",
+    "    return img\n",
+    "\n",
+    "# Save frames with predictions\n",
+    "print(\"🔍 Running inference on frames...\")\n",
+    "frame_paths = []\n",
+    "for idx, (img, fname) in enumerate(loader):\n",
+    "    img = img.to(DEVICE)\n",
+    "    with torch.no_grad():\n",
+    "        outputs = model(img)\n",
+    "\n",
+    "    output = outputs[0]\n",
+    "    boxes = output[\"boxes\"].cpu()\n",
+    "    labels = output[\"labels\"].cpu()\n",
+    "    scores = output[\"scores\"].cpu()\n",
+    "\n",
+    "    frame = draw_predictions(img[0], boxes, labels, scores)\n",
+    "    frame_path = os.path.join(OUTPUT_DIR, f\"pred_{idx:04d}.jpg\")\n",
+    "    cv2.imwrite(frame_path, frame)\n",
+    "    frame_paths.append(frame_path)\n",
+    "\n",
+    "# Create video\n",
+    "print(\"🎞️ Generating video...\")\n",
+    "if frame_paths:\n",
+    "    first_frame = cv2.imread(frame_paths[0])\n",
+    "    height, width, _ = first_frame.shape\n",
+    "    video_writer = cv2.VideoWriter(VIDEO_NAME, cv2.VideoWriter_fourcc(*\"mp4v\"), 10, (width, height))\n",
+    "\n",
+    "    for frame_path in frame_paths:\n",
+    "        frame = cv2.imread(frame_path)\n",
+    "        video_writer.write(frame)\n",
+    "\n",
+    "    video_writer.release()\n",
+    "    print(f\"✅ Video saved: {VIDEO_NAME}\")\n",
+    "else:\n",
+    "    print(\"❌ No frames to generate video.\")\n",
+    "\n",
+    "# Clean up\n",
+    "shutil.rmtree(OUTPUT_DIR)\n",
+    "print(\"🧹 Cleaned up temporary files.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "597ae937-ca0b-4bed-8d42-98ef46285af8",
    "metadata": {},
    "source": [
